# aa-data-handler

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/: load.py  main.py  save.py
src/aa_data_handler/: __init__.py  load.py  logger.py  main.py  save.py
tests/: test_load.py  test_save.py
